Unassign issues when a user is deleted from Redmine

--- a/src/main/resources/assets/frontend/sprints/editPeopleToIssues.html
+++ b/src/main/resources/assets/frontend/sprints/editPeopleToIssues.html
@@ -270,7 +270,7 @@
   </div>
   <div ng-if="otherIssues.length ==0  ">
     <div style="margin-top: 15px; " class="alert alert-info alert-dismissible" role="alert">
-      <strong>Heads up!</strong> No other issues found for this sprint!
+      <strong>Heads up!</strong> No uncategorized issues found for this sprint!
       <button type="button" style="position: static;" class="close" data-dismiss="alert" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
             </div>
