Fix for handling archived projects on Redmine
Note: When an archived project on Redmine is un-archived, the synchronization with CAST would still be successful. However, the issues assoicated with the un-archived projects would not show up on CAST as synchronization function only fetches the issues updated after recent entry on 'lastUpdatedTime' column of Issues table. The capabilities associated with an un-archived project  would also be deleted.

--- a/src/main/resources/assets/frontend/project/updateCapabilities.html
+++ b/src/main/resources/assets/frontend/project/updateCapabilities.html
@@ -64,7 +64,7 @@
 </style>
 <div>
   <div style="margin-top: 15px;" class="alert alert-info" role="alert">
-    Click a name and update the capabilities of the person for <strong>{{ projectName}} </strong> project.
+    Click a name, update and save the capabilities of each person in relation to <strong>{{ projectName}} </strong> project.
   </div>
 </div>
 <div class='parent'>
