--- a/src/main/resources/assets/frontend/project/projectsTable.html
+++ b/src/main/resources/assets/frontend/project/projectsTable.html
@@ -20,6 +20,7 @@
     <div class="panel panel-default-table panel-table" style="margin-bottom: 0px;">
       <div class="panel-heading">
         <md-button ng-disabled="enable" style="font-size: 15px; background-color: rgb(90, 132, 187);"  type="submit"  class="add-tab md-primary md-raised" ui-sref="management.projects.addProject.newProject"><i class="glyphicon glyphicon-plus"></i>Add project<md-tooltip  ng-show="enable"  md-direction="right"> This option has been disabled</md-tooltip> </md-button>
+        <md-button style="font-size: 15px; background-color: rgb(90, 132, 187);"  type="submit"  class="add-tab md-primary md-raised" ng-click="downloadProjects()"><i class="	glyphicon glyphicon-download-alt"></i>Download active projects<md-tooltip  md-direction="right"> Click to download the details of projects where time reporting was done in the past two years. This presents the projectId, projectName and issueId fields in CSV/Excel format. </md-tooltip> </md-button>
         <input type="text" style="margin-top: 10px;" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Filter Project"/>
         <div class="pull-right">
           <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body"></span>
